--- a/Frontend/src/Components/Screens/LoadingScreen.css
+++ b/Frontend/src/Components/Screens/LoadingScreen.css
@@ -29,11 +29,11 @@
     display: flex;
     justify-content: center;
     border: 4px solid #f3f3f3;
-    border-top: 4px solid #3498db;
+    border-top: 4px solid black;
     border-radius: 50%;
     width: 30px;
     height: 30px;
-    animation: spin 2s ease-in-out infinite;
+    animation: spin 1.5s linear infinite;
   }
   
   @keyframes spin {
